# fetchurl

./: .gitignore  .markdownlint-cli2.yaml  .yamllint  AGENTS.md  DESIGN.md  Dockerfile  LICENSE  README.md  fetchurl.go  fetchurl_test.go  go.mod  go.sum  mise.toml  sqlc.yaml
.github/workflows/: autorelease.yml  integration.yml
.jules/: CONSISTENTLY_IGNORED.md  janitor.md
cmd/: root.go  server.go
cmd/fetchurl/: cert.go  get.go  main.go  proxy.go  root.go  server.go
internal/app/: proxy.go  server.go
internal/db/: models.go  querier.go  query.sql  query.sql.go  rule.go  schema.sql  sqlite.go  sqlite_test.go
internal/db/migrations/: 000001_create_urls_table.up.sql  000002_add_algo_column.down.sql  (+1 more)
internal/errutil/: check.go
internal/eviction/: manager.go  manager_test.go  monitor.go  registry.go  types.go
internal/fetcher/: fetcher.go  fetcher_test.go
internal/handler/: handler.go  handler_test.go
internal/hashutil/: hashutil.go
internal/httpclient/: client.go
internal/proxy/: ca.go  ca_test.go  db_rule.go  db_rule_test.go  npm.go  npm_rule.go  proxy_test.go  rule.go  server.go
internal/repository/: local.go  local_test.go  repository.go  upstream.go
scripts/: release-build.sh
sdk/js/: cli.js  eslint.config.js  fetchurl.js  fetchurl.test.js  package-lock.json  package.json
sdk/python/: fetchurl.py  mise.toml  pyproject.toml  test_fetchurl.py
sdk/rust/: Cargo.toml
sdk/rust/examples/: get.rs
sdk/rust/src/: lib.rs
test/integration/: integration_test.go  npm_system_ca_test.go  npm_test.go  sdk_integration_test.go
(+7 files in other folders)
