[package]
name = "fetchurl-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
digest = "0.10"
sha1 = "0.10"
sha2 = "0.10"
rand = "0.8"
thiserror = "2"

[dev-dependencies]
ureq = { version = "2", default-features = false }
clap = { version = "4", features = ["derive"] }

[[example]]
name = "get"
